# RESTModels

./: .gitignore  README.md  mypy.ini  pyproject.toml
APIClient/: clients.py  resources.py
src/RESTModels/: __init__.py  builders.py  requests.py  resources.py
src/RESTModels/parsers/: __init__.py  args_parsers.py  response_parsers.py  type_alias_parsers.py  types_parsers.py
tests/test_parsers/: test_response_parsers.py  test_type_aliases_parsers.py
