[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "RESTModels"
version = "0.0.3"
authors = [
    { name="Sequew", email="kryseyt@gmail.com" },
]
description = "API client by resource models for RESTful API over JSON"
readme = "README.md"
dependencies = ["requests"]

[project.urls]
"Homepage" = "https://github.com/KrySeyt/RESTModels"

