[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120

[tool.setuptools]
package-dir = {"" = "src"}


[project]
name = "RESTModels"
version = "1.0.1"
authors = [
    { name="Sequew", email="kryseyt@gmail.com" },
]
description = "API client by resource models for RESTful API over JSON"
readme = "README.md"
dependencies = ["requests"]

[project.urls]
"Homepage" = "https://github.com/KrySeyt/RESTModels"
